--- a/index.html
+++ b/index.html
@@ -4136,7 +4136,7 @@ normalization</p>
         <!-- LEFT: LOGO + TITLE + TEXT -->
         <div class="flex-1">
           <div class="flex items-center mb-4">
-            <img src="./assets/internship/manipal-logo.png" alt="Manipal Teaching Hospital Logo" class="w-16 h-16 mr-4 object-contain">
+            <img src="./graphics/manipallogo.jpg" alt="Manipal Teaching Hospital Logo" class="w-16 h-16 mr-4 object-contain">
             <h3 class="orbitron text-2xl font-bold text-accent-cyan">Manipal Teaching Hospital, Pokhara</h3>
           </div>
           
@@ -4144,20 +4144,20 @@ normalization</p>
           <p class="text-sm mb-2"><strong>Duration:</strong> April 20, 2025 – July 21, 2025</p>
           <hr class="border-[var(--accent-cyan)]/30 my-3">
           <p class="text-sm leading-relaxed">
-            Completed a 3-month internship under the Engineering Department, focusing on hospital power systems,
-            automation, and design supervision. Assisted in power distribution audits, fault analysis, and system upgrades for hospital reliability. Gained hands-on experience with SCADA systems and load balancing.
+            Completed a 3-month internship under the General service-Electrical Department within the supervision of Er.Laxman Acharya, focusing on hospital power systems,
+            automation, distribution and generation. Assisted in power distribution audits, fault analysis, and system upgrades for hospital reliability. Gained experience with PLC SCADA systems ,Autocad electrical designs and load balancing.
           </p>
         </div>
         
         <!-- RIGHT: 16:9 IMAGE SPACE -->
-        <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden cursor-pointer" onclick="openModal('./graphics/manipal-hospital.jpg', 'Manipal Teaching Hospital Overview')">
-          <img src="./graphics/manipal-hospital.jpg" alt="Manipal Teaching Hospital Overview" class="w-full h-full object-cover">
-          <p class="text-xs text-center mt-1">Manipal Teaching Hospital Overview</p>
+        <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden cursor-pointer" onclick="openModal('./graphics/manipal10.jpg', 'Manipal Teaching Hospital Internship overiview')">
+          <img src="./graphics/manipal10.jpg" alt="Manipal Teaching Hospital Internship Overview" class="w-full h-full object-cover">
+          <p class="text-xs text-center mt-1">Manipal Teaching Hospital Internship Reference Images</p>
         </div>
       </div>
 
       <!-- REQUEST BUTTON -->
-      <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Manipal Internship Details" class="block mt-6 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
+      <a href="mailto:poudeldipesh1001@gmail.com.fr?subject=Manipal Internship Details" class="block mt-6 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
     </div>
 
     <!-- GRID OF 6 BOXES: 3 rows x 2 columns -->
@@ -4347,7 +4347,7 @@ normalization</p>
 
   .internship-img-wrapper img {
     width: 100%;
-    height: 200px;
+    height: 230px;
     object-fit: contain;
     display: block;
   }
@@ -5563,6 +5563,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
