--- a/index.html
+++ b/index.html
@@ -4083,38 +4083,6 @@ normalization</p>
 
 
  
-  
-  
-  
-  
-  <!-- NEW INTERNSHIP SECTION -->
-<section id="internship" class="section aerospace-bg"> <!-- Reuse aerospace-bg or add custom -->
-  <div class="max-w-7xl mx-auto">
-    <h2 class="orbitron text-4xl font-bold text-center mb-12">
-      <span class="status-indicator status-active"></span>INTERNSHIP EXPERIENCE
-    </h2>
-    <div class="grid grid-cols-1 lg:grid-cols-1 gap-8 mb-16"> <!-- 1-col for simplicity -->
-      <!-- Manipal Teaching Hospital -->
-      <div class="project-card">
-        <div class="hud-corner tl"></div>
-        <div class="hud-corner tr"></div>
-        <div class="hud-corner bl"></div>
-        <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold mb-4 text-accent-cyan">Manipal Teaching Hospital Power System Internship</h3>
-        <p class="text-sm mb-4">[Brief description: e.g., Assisted in power distribution audits, fault analysis, and system upgrades for hospital reliability. Gained hands-on experience with SCADA systems and load balancing.].</p>
-        <!-- Add images if you have: <img src="./assets/internship/manipal1.png" ... onclick="openModal(...)"> -->
-        <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=Manipal Internship Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
-      </div>
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -4151,7 +4119,7 @@ normalization</p>
         
         <!-- RIGHT: 16:9 IMAGE SPACE -->
         <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden cursor-pointer" onclick="openModal('./graphics/manipal10.jpg', 'Manipal Teaching Hospital Internship overiview')">
-          <img src="./graphics/manipal10.jpg" alt="Manipal Teaching Hospital Internship Overview" class="w-full h-full object-cover">
+          <img src="./graphics/manipal28.png" alt="Manipal Teaching Hospital Internship Overview" class="w-full h-full object-cover">
           <p class="text-xs text-center mt-1">Manipal Teaching Hospital Internship Reference Images</p>
         </div>
       </div>
@@ -4179,8 +4147,8 @@ normalization</p>
             <p class="text-xs text-center">Power diagram</p>
           </div>
           <div class="internship-img-wrapper">
-            <img src="./graphics/manipal12.jpg" alt="Panel wiring" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal12.jpg', 'Panel wiring')">
-            <p class="text-xs text-center">Panel wiring</p>
+            <img src="./graphics/manipal27.jpg" alt=" Hospital Basement PB" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/manipal12.jpg', 'Hospital Basement PB')">
+            <p class="text-xs text-center">Hospital Basement PB </p>
           </div>
         </div>
       </div>
@@ -5563,6 +5531,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
