--- a/index.html
+++ b/index.html
@@ -4385,7 +4385,7 @@ normalization</p>
         <!-- LEFT: LOGO + TITLE + TEXT -->
         <div class="flex-1">
           <div class="flex items-center mb-4">
-            <img src="./assets/internship/elex-logo.png" alt="Elex Engineering Logo" class="w-16 h-16 mr-4 object-contain">
+            <img src="./graphics/audit0.png" alt="Elex Engineering Logo" class="w-16 h-16 mr-4 object-contain">
             <h3 class="orbitron text-2xl font-bold text-accent-cyan">Elex Engineering Pvt. Ltd., Pokhara</h3>
           </div>
           
@@ -4400,14 +4400,14 @@ normalization</p>
         </div>
         
         <!-- RIGHT: 16:9 IMAGE SPACE -->
-        <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden cursor-pointer" onclick="openModal('./graphics/elex-fishtail.jpg', 'Fishtail Lodge Overview')">
-          <img src="./graphics/elex-fishtail.jpg" alt="Fishtail Lodge Overview" class="w-full h-full object-cover">
-          <p class="text-xs text-center mt-1">Fishtail Lodge Overview</p>
+        <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden cursor-pointer" onclick="openModal('./graphics/audit20.jpg', 'Intern Audit Team at Lodge')">
+          <img src="./graphics/audit20.jpg" alt="Intern Audit Team at Lodge" class="w-full h-full object-cover">
+          <p class="text-xs text-center mt-1">Intern-Audit Team </p>
         </div>
       </div>
 
       <!-- REQUEST BUTTON -->
-      <a href="mailto:deepak.poudel@student.isae-supaero.fr?subject=Elex Internship Details" class="block mt-6 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
+      <a href="mailto:poudeldipesh1001@gmail.com.fr?subject=Elex Internship Details" class="block mt-6 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
     </div>
 
     <!-- GRID OF 4 BOXES: 2 rows x 2 columns -->
@@ -4503,8 +4503,8 @@ normalization</p>
             <p class="text-xs text-center">Data Analysis</p>
           </div>
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex8.jpg" alt="Audit Report Documentation" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex8.jpg', 'Audit Report Documentation')">
-            <p class="text-xs text-center">Audit Report Documentation</p>
+            <img src="./graphics/audit10.png" alt="Summary of Report" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit10.png', 'Report Summary')">
+            <p class="text-xs text-center">Audit Report Summarized Infront of Hotel Management</p>
           </div>
         </div>
       </div>
@@ -5759,6 +5759,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
