--- a/index.html
+++ b/index.html
@@ -4419,20 +4419,20 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold text-accent-cyan">⚡ ELECTRICAL SYSTEM ANALYSIS</h3>
+        <h3 class="orbitron text-xl font-bold text-accent-cyan">⚡ASSESMENT OF EXISTING ELECTRICAL SYSTEM</h3>
         <ul class="text-sm list-disc pl-4">
-          <li>Transformer loss and efficiency analysis</li>
-          <li>Power factor correction and load trend analysis</li>
+          <li>ELectrical consumption breakdown</li>
+          <li>Review of exisitng energy consumption trend and billing Analysis.</li>
           <li>Grid condition assessment and demand profiling</li>
         </ul>
         <div class="elex-img-row">
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex1.jpg" alt="Transformer Analysis" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex1.jpg', 'Transformer Analysis')">
-            <p class="text-xs text-center">Transformer Analysis</p>
+            <img src="./graphics/audit11.png" alt="Consumption Breakdown" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit11.png', 'Breakdown of Consumption')">
+            <p class="text-xs text-center">Breakdown of Prevailing Consumption</p>
           </div>
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex2.jpg" alt="Power Factor Measurement" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex2.jpg', 'Power Factor Measurement')">
-            <p class="text-xs text-center">Power Factor Measurement</p>
+            <img src="./graphics/audit13.png" alt="Data Analysis" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit13.png', 'Data Analyiis of Biling/Consumption')">
+            <p class="text-xs text-center">Data analysis of consumption?Billing</p>
           </div>
         </div>
       </div>
@@ -4443,20 +4443,20 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold text-accent-cyan">🔥 THERMAL & BOILER AUDIT</h3>
+        <h3 class="orbitron text-xl font-bold text-accent-cyan">TRANSFORMER LOAD ASSESMENT/EARTHING MEASUREMNTS</h3>
         <ul class="text-sm list-disc pl-4">
-          <li>Boiler efficiency testing and thermal loss assessment</li>
-          <li>HVAC system optimization and insulation checks</li>
-          <li>Heat balance calculations and recovery measures</li>
+          <li>On site load measuremnt/TOD meter data review and analysis from NEA</li>
+          <li>Transformer replacement and CB analysis</li>
+          <li>Eathing system measurement and recommendations.</li>
         </ul>
         <div class="elex-img-row">
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex3.jpg" alt="Boiler Inspection" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex3.jpg', 'Boiler Inspection')">
-            <p class="text-xs text-center">Boiler Inspection</p>
+            <img src="./graphics/audit12.png" alt="Transformer analysis" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit12.png', 'Analysis of Transformer ')">
+            <p class="text-xs text-center">Detailed transformer analysis.</p>
           </div>
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex4.jpg" alt="HVAC System Check" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex4.jpg', 'HVAC System Check')">
-            <p class="text-xs text-center">HVAC System Check</p>
+            <img src="./graphics/audit21.png" alt="Earthing level data" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit21.png', 'Earthing check')">
+            <p class="text-xs text-center">Earthing level measurement/recommendations</p>
           </div>
         </div>
       </div>
@@ -4467,7 +4467,7 @@ normalization</p>
         <div class="hud-corner tr"></div>
         <div class="hud-corner bl"></div>
         <div class="hud-corner br"></div>
-        <h3 class="orbitron text-xl font-bold text-accent-cyan">⚙️ MECHANICAL SYSTEM REVIEW</h3>
+        <h3 class="orbitron text-xl font-bold text-accent-cyan">THERMAL AND  MECHANICAL SYSTEM REVIEW</h3>
         <ul class="text-sm list-disc pl-4">
           <li>Motor and pump efficiency testing and diagnostics</li>
           <li>Fan and exhaust system performance study</li>
@@ -5759,6 +5759,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
