--- a/index.html
+++ b/index.html
@@ -4469,18 +4469,18 @@ normalization</p>
         <div class="hud-corner br"></div>
         <h3 class="orbitron text-xl font-bold text-accent-cyan">THERMAL AND  MECHANICAL SYSTEM REVIEW</h3>
         <ul class="text-sm list-disc pl-4">
-          <li>Motor and pump efficiency testing and diagnostics</li>
-          <li>Fan and exhaust system performance study</li>
+          <li>Energy consumption analysis of thermal and heat pump system</li>
+          <li>AC, Motor, Kitchen and exhaust system compartitive performance study</li>
           <li>Proposed retrofits and equipment upgrades</li>
         </ul>
         <div class="elex-img-row">
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex5.jpg" alt="Motor Efficiency Test" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex5.jpg', 'Motor Efficiency Test')">
+            <img src="./graphics/audit14.png" alt="Heat Pump Testing" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit14.png', 'Heat Pump Testing')">
             <p class="text-xs text-center">Motor Efficiency Test</p>
           </div>
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex6.jpg" alt="Pump System Inspection" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex6.jpg', 'Pump System Inspection')">
-            <p class="text-xs text-center">Pump System Inspection</p>
+            <img src="./graphics/audit17.png" alt="HVAC system Optimizations" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit17.png', 'Optimization of of HVAC')">
+            <p class="text-xs text-center">HVAC system optimization recommendations</p>
           </div>
         </div>
       </div>
@@ -4495,16 +4495,16 @@ normalization</p>
         <ul class="text-sm list-disc pl-4">
           <li>Energy savings validation and benchmarking</li>
           <li>Cost-benefit analysis and lifecycle assessments</li>
-          <li>Final audit documentation and recommendation reports</li>
+          <li>Final audit documentation and recommendation report presentation</li>
         </ul>
         <div class="elex-img-row">
           <div class="elex-img-wrapper">
-            <img src="./graphics/elex7.jpg" alt="Data Analysis" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/elex7.jpg', 'Data Analysis')">
+            <img src="./graphics/audit32.png" alt="Audit Report" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit33.png', 'Audit Report')">
             <p class="text-xs text-center">Data Analysis</p>
           </div>
           <div class="elex-img-wrapper">
-            <img src="./graphics/audit10.png" alt="Summary of Report" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit10.png', 'Report Summary')">
-            <p class="text-xs text-center">Audit Report Summarized Infront of Hotel Management</p>
+            <img src="./graphics/audit33.png" alt="Confidentiality" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit33.png', 'confideantiality')">
+            <p class="text-xs text-center">Information Regarding confidentiality</p>
           </div>
         </div>
       </div>
@@ -5759,6 +5759,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
