--- a/index.html
+++ b/index.html
@@ -4090,7 +4090,7 @@ normalization</p>
 <section id="internship" class="section aerospace-bg">
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
-      <span class="status-indicator status-active"></span>INTERNSHIP EXPERIENCE
+      <span class="status-indicator status-active"></span>INTERNSHIP-1
     </h2>
 
     <!-- MAIN HOSPITAL BOX -->
@@ -4341,37 +4341,11 @@ normalization</p>
 
   
   
-
-
-
-
-  
-      <!-- ELex Engineering -->
-      <div class="project-card hologram">
-        <h3 class="orbitron text-xl font-bold mb-4 text-warning-amber">ELex Engineering - Energy Audit Internship</h3>
-        <p class="text-sm mb-4">[Brief description: e.g., Conducted energy audits for industrial clients, identifying efficiency opportunities and recommending renewable integrations. Used tools like FLIR thermal imaging and ETAP software.].</p>
-        <!-- Add images if needed -->
-        <a href="mailto:dipesh.poudel@student.isae-supaero.fr?subject=ELex Internship Details" class="block mt-4 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Request Details</a>
-      </div>
-    </div>
-  </div>
-</section>
-
-
-
-
-
-
-
-
-
-
-
 <!-- ====================== ELEX ENGINEERING INTERNSHIP SECTION ====================== -->
 <section id="elex-internship" class="section aerospace-bg">
   <div class="max-w-7xl mx-auto">
     <h2 class="orbitron text-4xl font-bold text-center mb-12">
-      <span class="status-indicator status-active"></span>ELEX ENGINEERING INTERNSHIP EXPERIENCE
+      <span class="status-indicator status-active"></span>INTERNSHIP-2
     </h2>
 
     <!-- MAIN ELEX BOX -->
@@ -4391,7 +4365,7 @@ normalization</p>
           
           <p class="text-sm mb-2"><strong>Role:</strong> Energy Audit Intern</p>
           <p class="text-sm mb-2"><strong>Project:</strong> Energy Audit of Fishtail Lodge, Pokhara</p>
-          <p class="text-sm mb-2"><strong>Duration:</strong> January – March 2025</p>
+          <p class="text-sm mb-2"><strong>Duration:</strong> September – October 2025</p>
           <hr class="border-[var(--accent-cyan)]/30 my-3">
           <p class="text-sm leading-relaxed">
             Conducted a comprehensive energy audit in collaboration with Student research team of Paschimanchal Campus, IOE.
@@ -4451,11 +4425,11 @@ normalization</p>
         </ul>
         <div class="elex-img-row">
           <div class="elex-img-wrapper">
-            <img src="./graphics/audit12.png" alt="Transformer analysis" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit12.png', 'Analysis of Transformer ')">
+            <img src="./graphics/audit21.jpg" alt="Transformer analysis" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit21.jpg', 'Analysis of Transformer ')">
             <p class="text-xs text-center">Detailed transformer analysis.</p>
           </div>
           <div class="elex-img-wrapper">
-            <img src="./graphics/audit21.png" alt="Earthing level data" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit21.png', 'Earthing check')">
+            <img src="./graphics/audit12.png" alt="Earthing level data" class="rounded cursor-pointer shake-on-hover" onclick="openModal('./graphics/audit12.png', 'Earthing check')">
             <p class="text-xs text-center">Earthing level measurement/recommendations</p>
           </div>
         </div>
@@ -5759,6 +5733,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
