--- a/index.html
+++ b/index.html
@@ -4553,7 +4553,7 @@ normalization</p>
     }
   }
 </style>
-
+   
 
 
 
@@ -4801,6 +4801,154 @@ normalization</p>
     </div>
   </div>
 </section>
+
+
+
+
+
+
+
+
+
+
+<!-- MAIN DOMESTIC WORKSHOP BOX -->
+<div class="project-card hologram mb-12">
+  <div class="hud-corner tl"></div>
+  <div class="hud-corner tr"></div>
+  <div class="hud-corner bl"></div>
+  <div class="hud-corner br"></div>
+  
+  <div class="flex flex-col md:flex-row items-start gap-6">
+    <!-- LEFT: LOGO + TITLE + TEXT -->
+    <div class="flex-1">
+      <!-- LOGO PLACEHOLDER -->
+      <div class="flex items-center mb-4">
+        <!-- If logo exists: <img src="./graphics/domestic-logo.png" alt="Domestic Electrification Workshop Logo" class="w-16 h-16 mr-4 object-contain"> -->
+        <h3 class="orbitron text-2xl font-bold text-accent-cyan">DOMESTIC ELECTRIFICATION WORKSHOP</h3>
+      </div>
+      
+      <!-- TEXT BELOW -->
+      <p class="text-sm mb-2"><strong>Role:</strong> Mentor/Organizer Committee</p>
+      <p class="text-sm mb-2"><strong>Duration:</strong> 9-16 June 2024</p>
+      <hr class="border-[var(--accent-cyan)]/30 my-3">
+      <ul class="text-sm leading-relaxed list-disc pl-4">
+        <li>Introduction to house wiring. Its fundamentals and wiring techniques.</li>
+        <li>Connection of CB and main switches for power distribution.</li>
+        <li>Tunneling, godown master switch, energy meter and door bell circuitry.</li>
+        <li>Wiring competition and certification.</li>
+      </ul>
+    </div>
+    
+    <!-- RIGHT: 4:3 CAROUSEL WITH 4 IMAGES (AUTO-SLIDING) -->
+    <div class="flex-1 w-full aspect-[4/3] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden relative">
+      <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="domestic-carousel" style="transform: translateX(0%); height: 100%;">
+        <div class="carousel-item flex-shrink-0 w-full h-full">
+          <img src="./graphics/domestic1.jpg" alt="Workshop Image 1" class="w-full h-full object-cover cursor-pointer shake-on-hover" onclick="openModal('./graphics/domestic1.jpg', 'Workshop Image 1')">
+          <p class="text-xs text-center mt-0.5">Workshop Image 1</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full">
+          <img src="./graphics/domestic2.jpg" alt="Workshop Image 2" class="w-full h-full object-cover cursor-pointer shake-on-hover" onclick="openModal('./graphics/domestic2.jpg', 'Workshop Image 2')">
+          <p class="text-xs text-center mt-0.5">Workshop Image 2</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full">
+          <img src="./graphics/domestic3.jpg" alt="Workshop Image 3" class="w-full h-full object-cover cursor-pointer shake-on-hover" onclick="openModal('./graphics/domestic3.jpg', 'Workshop Image 3')">
+          <p class="text-xs text-center mt-0.5">Workshop Image 3</p>
+        </div>
+        <div class="carousel-item flex-shrink-0 w-full h-full">
+          <img src="./graphics/domestic4.jpg" alt="Workshop Image 4" class="w-full h-full object-cover cursor-pointer shake-on-hover" onclick="openModal('./graphics/domestic4.jpg', 'Workshop Image 4')">
+          <p class="text-xs text-center mt-0.5">Workshop Image 4</p>
+        </div>
+      </div>
+      <button onclick="slideCarousel('domestic-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">‹</button>
+      <button onclick="slideCarousel('domestic-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity">›</button>
+    </div>
+  </div>
+
+  <!-- REQUEST BUTTON -->
+  <a href="https://www.facebook.com/photo.php?fbid=1091697569084181&set=pb.100047318435793.-2207520000&type=3" target="_blank" class="block mt-6 bg-[var(--primary-blue)] text-black px-4 py-2 rounded font-bold hover:bg-[var(--accent-cyan)] transition-all w-full text-center orbitron">Click for More Details</a>
+</div>
+
+<!-- ====================== STYLES ====================== -->
+<style>
+  /* Tighten spacing in project-card */
+  .project-card {
+    padding: 1.25rem; /* Reduced for compact layout */
+  }
+
+  /* Reduce margins */
+  .project-card h3 {
+    margin-bottom: 0.5rem; /* Tightened spacing */
+  }
+
+  .project-card ul {
+    margin-bottom: 0.5rem; /* Tightened spacing */
+  }
+
+  .project-card .flex {
+    gap: 0.5rem; /* Reduced gap for images */
+  }
+
+  /* Carousel for 4:3 images */
+  .carousel-container {
+    display: flex;
+    width: 100%;
+    height: 100%;
+  }
+
+  .carousel-item {
+    min-width: 100%;
+    height: 100%;
+  }
+
+  .carousel-item img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  /* Caption spacing */
+  .text-xs.text-center {
+    margin-top: 0.5rem !important; /* Snug caption placement */
+  }
+</style>
+
+<!-- ====================== SCRIPT ====================== -->
+<script>
+  // Auto-slide for carousel (reuse existing site function if available)
+  function autoSlide(id) {
+    let index = 0;
+    const carousel = document.getElementById(id);
+    const numItems = carousel.children.length;
+    if (numItems <= 1) return;
+    setInterval(() => {
+      index = (index + 1) % numItems;
+      carousel.style.transition = 'transform 0.5s ease-in-out';
+      carousel.style.transform = `translateX(-${index * 100}%)`;
+    }, 5000);
+  }
+
+  // Initialize auto-slide
+  document.addEventListener('DOMContentLoaded', () => {
+    autoSlide('domestic-carousel');
+  });
+</script>
+
+
+
+
+
+
+
+
+
+
+
+  
+
+
+
+
+  
 
 <!-- NEW SERVICE/LEADERSHIP SECTION -->
 <section id="service" class="section philosophy-bg"> <!-- Reuse or custom -->
@@ -5733,6 +5881,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
