--- a/index.html
+++ b/index.html
@@ -4810,7 +4810,6 @@ normalization</p>
 
 
 
-
 <!-- MAIN DOMESTIC WORKSHOP BOX -->
 <div class="project-card hologram mb-12">
   <div class="hud-corner tl"></div>
@@ -4821,9 +4820,9 @@ normalization</p>
   <div class="flex flex-col md:flex-row items-start gap-6">
     <!-- LEFT: LOGO + TITLE + TEXT -->
     <div class="flex-1">
-      <!-- LOGO PLACEHOLDER -->
+      <!-- LOGO + TITLE -->
       <div class="flex items-center mb-4">
-        <!-- If logo exists: <img src="./graphics/domestic-logo.png" alt="Domestic Electrification Workshop Logo" class="w-16 h-16 mr-4 object-contain"> -->
+        <img src="./graphics/domestic-logo.png" alt="Domestic Electrification Workshop Logo" class="w-16 h-16 mr-4 object-contain"> <!-- Replace with actual logo path -->
         <h3 class="orbitron text-2xl font-bold text-accent-cyan">DOMESTIC ELECTRIFICATION WORKSHOP</h3>
       </div>
       
@@ -4840,7 +4839,7 @@ normalization</p>
     </div>
     
     <!-- RIGHT: 4:3 CAROUSEL WITH 4 IMAGES (AUTO-SLIDING) -->
-    <div class="flex-1 w-full aspect-[4/3] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden relative">
+    <div class="flex-1 w-full aspect-[16/9] bg-[var(--secondary-blue)]/20 rounded-lg overflow-hidden relative">
       <div class="carousel-container flex transition-transform duration-500 ease-in-out" id="domestic-carousel" style="transform: translateX(0%); height: 100%;">
         <div class="carousel-item flex-shrink-0 w-full h-full">
           <img src="./graphics/domestic1.jpg" alt="Workshop Image 1" class="w-full h-full object-cover cursor-pointer shake-on-hover" onclick="openModal('./graphics/domestic1.jpg', 'Workshop Image 1')">
@@ -4872,23 +4871,23 @@ normalization</p>
 <style>
   /* Tighten spacing in project-card */
   .project-card {
-    padding: 1.25rem; /* Reduced for compact layout */
+    padding: 1.25rem; /* Matches reference code */
   }
 
   /* Reduce margins */
   .project-card h3 {
-    margin-bottom: 0.5rem; /* Tightened spacing */
+    margin-bottom: 0.5rem; /* Matches reference code */
   }
 
   .project-card ul {
-    margin-bottom: 0.5rem; /* Tightened spacing */
+    margin-bottom: 0.5rem; /* Matches reference code */
   }
 
   .project-card .flex {
-    gap: 0.5rem; /* Reduced gap for images */
+    gap: 0.5rem; /* Matches reference code */
   }
 
-  /* Carousel for 4:3 images */
+  /* Carousel for 16:9 images (matching main box height) */
   .carousel-container {
     display: flex;
     width: 100%;
@@ -4908,7 +4907,17 @@ normalization</p>
 
   /* Caption spacing */
   .text-xs.text-center {
-    margin-top: 0.5rem !important; /* Snug caption placement */
+    margin-top: 0.5rem !important; /* Matches reference code */
+  }
+
+  /* Responsive adjustments */
+  @media (max-width: 768px) {
+    .project-card {
+      padding: 1rem;
+    }
+    .carousel-item img {
+      height: 120px; /* Matches reference code for mobile */
+    }
   }
 </style>
 
@@ -4932,20 +4941,6 @@ normalization</p>
     autoSlide('domestic-carousel');
   });
 </script>
-
-
-
-
-
-
-
-
-
-
-
-  
-
-
 
 
   
@@ -5881,6 +5876,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
