--- a/index.html
+++ b/index.html
@@ -4901,10 +4901,13 @@ normalization</p>
 
   .carousel-item img {
     width: 100%;
-    height: 100%;
-    object-fit: cover;
+    height: 230px;
+    object-fit: contain;
   }
 
+
+
+  
   /* Caption spacing */
   .text-xs.text-center {
     margin-top: 0.5rem !important; /* Matches reference code */
@@ -5876,6 +5879,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
