--- a/index.html
+++ b/index.html
@@ -4867,6 +4867,7 @@ normalization</p>
           <button onclick="slideCarousel('domestic-carousel', -1)" class="absolute left-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10">‹</button>
           <button onclick="slideCarousel('domestic-carousel', 1)" class="absolute right-0 top-1/2 transform -translate-y-1/2 bg-[var(--primary-blue)] text-black px-3 py-2 rounded opacity-75 hover:opacity-100 transition-opacity z-10">›</button>
         </div>
+        <p class="text-xs text-center mt-2" id="domestic-carousel-caption">Wiring Assembly</p>
       </div>
     </div>
   </div>
@@ -5930,6 +5931,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
