--- a/index.html
+++ b/index.html
@@ -1562,6 +1562,81 @@ Global diurnal inference traffic was modeled across 10 geographic regions with d
   <!-- HOW Section -->
   <div class="project-card hologram">
     <h3 class="orbitron text-xl font-bold mb-4 text-warning-amber">HOW: Mathematical Modeling and Parametric Computation Chain </h3>
+
+
+
+    <!-- ==== BEGIN SVG PREVIEW + MODAL ==== -->
+<style>
+/* ---- Preview box (fits inside the section) ---- */
+.svg-preview-box {
+    max-width: 100%;          /* never overflows the section */
+    height: auto;
+    border: 2px solid #ddd;
+    border-radius: 8px;
+    cursor: zoom-in;
+    transition: transform .2s;
+    display: block;
+    margin: 1.5rem auto;      /* centered with some breathing room */
+}
+.svg-preview-box:hover { transform: scale(1.02); }
+
+/* ---- Modal overlay ---- */
+.svg-modal {
+    display: none;            /* hidden until opened */
+    position: fixed;
+    z-index: 9999;
+    left: 0; top: 0;
+    width: 100%; height: 100%;
+    background-color: rgba(0,0,0,.85);
+    justify-content: center;
+    align-items: center;
+    overflow: auto;
+}
+.svg-modal img {
+    max-width: 95vw;
+    max-height: 95vh;
+    object-fit: contain;
+}
+.svg-modal .close {
+    position: absolute;
+    top: 20px; right: 30px;
+    color: #fff;
+    font-size: 40px;
+    font-weight: bold;
+    cursor: pointer;
+}
+</style>
+
+<!-- Preview image (scaled thumbnail) -->
+<img src="YOUR_SVG_FILE.svg"   <!-- <-- replace with your actual file path -->
+     alt="Mathematical Modeling and Parametric Computation Chain"
+     class="svg-preview-box"
+     id="svgPreview">
+
+<!-- Modal (full-size image) -->
+<div class="svg-modal" id="svgModal">
+    <span class="close" id="closeModal">&times;</span>
+    <img src="YOUR_SVG_FILE.svg"   <!-- same file – shown full size -->
+         alt="Full view">
+</div>
+
+<script>
+const preview = document.getElementById('svgPreview');
+const modal   = document.getElementById('svgModal');
+const close   = document.getElementById('closeModal');
+
+preview.onclick = () => modal.style.display = 'flex';
+close.onclick   = () => modal.style.display = 'none';
+modal.onclick   = (e) => { if (e.target === modal) modal.style.display = 'none'; };
+window.onkeydown = (e) => { if (e.key === 'Escape') modal.style.display = 'none'; };
+</script>
+<!-- ==== END SVG PREVIEW + MODAL ==== -->  
+
+
+
+
+
+    
     <div class="space-y-3">
       <div class="flex items-center">
         <div class="w-4 h-4 border border-accent-cyan mr-3"></div>
@@ -4521,6 +4596,7 @@ normalization</p>
 </body>
 </html>
 ```
+
 
 
 
